ADD: Dashboard and header

--- a/root_web_app/src/App.css
+++ b/root_web_app/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+#logoutbutton {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #9011da;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
