--- a/root_web_app/src/App.css
+++ b/root_web_app/src/App.css
@@ -13,15 +13,11 @@
   }
 }
 
-.App-header {
+#AppHeader {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
   color: white;
+  text-align: center;
 }
 
 .App-link {
